parser.output
Terminals unused in grammar

   TOKEN_ERROR


State 50 conflicts: 1 shift/reduce, 1 reduce/reduce
State 92 conflicts: 1 shift/reduce, 1 reduce/reduce
State 117 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: dec_list
    2        | KW_INT

    3 dec_list: dec dec_list
    4         | dec

    5 dec: type TK_IDENTIFIER '=' '=' lit ';'
    6    | type TK_IDENTIFIER '[' LIT_INT ']' '=' '=' lit_list ';'
    7    | type TK_IDENTIFIER '[' LIT_INT ']' ';'
    8    | type TK_IDENTIFIER '(' param_list ')' block

    9 lit_list: lit lit_list
   10         | lit

   11 param_list: type TK_IDENTIFIER param_list_tail
   12           | /* empty */

   13 param_list_tail: ',' type TK_IDENTIFIER param_list_tail
   14                | /* empty */

   15 type: KW_INT
   16     | KW_CHAR

   17 block: '{' cmd_list '}'

   18 cmd_list: cmd cmd_list
   19         | cmd

   20 cmd: ';'
   21    | KW_IF '(' expr ')' KW_THEN cmd
   22    | KW_IF '(' expr ')' KW_THEN cmd KW_ELSE cmd
   23    | KW_READ TK_IDENTIFIER ';'
   24    | KW_RETURN expr ';'
   25    | KW_PRINT print_list ';'
   26    | KW_WHILE '(' expr ')' cmd
   27    | block
   28    | TK_IDENTIFIER '=' '=' expr ';'
   29    | TK_IDENTIFIER '[' expr ']' '=' '=' expr ';'

   30 expr: expr '+' expr
   31     | expr '-' expr
   32     | expr '*' expr
   33     | expr '/' expr
   34     | expr '<' expr
   35     | expr '>' expr
   36     | expr '=' expr
   37     | expr '&' expr
   38     | expr '|' expr
   39     | expr '~' expr
   40     | '(' expr ')'
   41     | TK_IDENTIFIER '(' arg_list ')'
   42     | TK_IDENTIFIER
   43     | TK_IDENTIFIER '[' expr ']'
   44     | lit

   45 lit: LIT_INT
   46    | LIT_CHAR
   47    | LIT_STRING

   48 print_list: expr print_list_tail
   49           | LIT_STRING print_list_tail

   50 print_list_tail: ',' expr print_list_tail
   51                | ',' LIT_STRING print_list_tail
   52                | /* empty */

   53 arg_list: expr arg_list_tail
   54         | /* empty */

   55 arg_list_tail: ',' expr arg_list_tail
   56              | /* empty */


Terminals, with rules where they appear

$end (0) 0
'&' (38) 37
'(' (40) 8 21 22 26 40 41
')' (41) 8 21 22 26 40 41
'*' (42) 32
'+' (43) 30
',' (44) 13 50 51 55
'-' (45) 31
'/' (47) 33
';' (59) 5 6 7 20 23 24 25 28 29
'<' (60) 34
'=' (61) 5 6 28 29 36
'>' (62) 35
'[' (91) 6 7 29 43
']' (93) 6 7 29 43
'{' (123) 17
'|' (124) 38
'}' (125) 17
'~' (126) 39
error (256)
KW_CHAR (258) 16
KW_INT (259) 2 15
KW_IF (260) 21 22
KW_THEN (261) 21 22
KW_ELSE (262) 22
KW_WHILE (263) 26
KW_READ (264) 23
KW_PRINT (265) 25
KW_RETURN (266) 24
TK_IDENTIFIER (267) 5 6 7 8 11 13 23 28 29 41 42 43
LIT_INT (268) 6 7 45
LIT_CHAR (269) 46
LIT_STRING (270) 47 49 51
TOKEN_ERROR (271)


Nonterminals, with rules where they appear

$accept (35)
    on left: 0
program (36)
    on left: 1 2, on right: 0
dec_list (37)
    on left: 3 4, on right: 1 3
dec (38)
    on left: 5 6 7 8, on right: 3 4
lit_list (39)
    on left: 9 10, on right: 6 9
param_list (40)
    on left: 11 12, on right: 8
param_list_tail (41)
    on left: 13 14, on right: 11 13
type (42)
    on left: 15 16, on right: 5 6 7 8 11 13
block (43)
    on left: 17, on right: 8 27
cmd_list (44)
    on left: 18 19, on right: 17 18
cmd (45)
    on left: 20 21 22 23 24 25 26 27 28 29, on right: 18 19 21 22 26
expr (46)
    on left: 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44, on right:
    21 22 24 26 28 29 30 31 32 33 34 35 36 37 38 39 40 43 48 50 53
    55
lit (47)
    on left: 45 46 47, on right: 5 9 10 44
print_list (48)
    on left: 48 49, on right: 25
print_list_tail (49)
    on left: 50 51 52, on right: 48 49 50 51
arg_list (50)
    on left: 53 54, on right: 41
arg_list_tail (51)
    on left: 55 56, on right: 53 55


state 0

    0 $accept: . program $end

    KW_CHAR  shift, and go to state 1
    KW_INT   shift, and go to state 2

    program   go to state 3
    dec_list  go to state 4
    dec       go to state 5
    type      go to state 6


state 1

   16 type: KW_CHAR .

    $default  reduce using rule 16 (type)


state 2

    2 program: KW_INT .
   15 type: KW_INT .

    TK_IDENTIFIER  reduce using rule 15 (type)
    $default       reduce using rule 2 (program)


state 3

    0 $accept: program . $end

    $end  shift, and go to state 7


state 4

    1 program: dec_list .

    $default  reduce using rule 1 (program)


state 5

    3 dec_list: dec . dec_list
    4         | dec .

    KW_CHAR  shift, and go to state 1
    KW_INT   shift, and go to state 8

    $default  reduce using rule 4 (dec_list)

    dec_list  go to state 9
    dec       go to state 5
    type      go to state 6


state 6

    5 dec: type . TK_IDENTIFIER '=' '=' lit ';'
    6    | type . TK_IDENTIFIER '[' LIT_INT ']' '=' '=' lit_list ';'
    7    | type . TK_IDENTIFIER '[' LIT_INT ']' ';'
    8    | type . TK_IDENTIFIER '(' param_list ')' block

    TK_IDENTIFIER  shift, and go to state 10


state 7

    0 $accept: program $end .

    $default  accept


state 8

   15 type: KW_INT .

    $default  reduce using rule 15 (type)


state 9

    3 dec_list: dec dec_list .

    $default  reduce using rule 3 (dec_list)


state 10

    5 dec: type TK_IDENTIFIER . '=' '=' lit ';'
    6    | type TK_IDENTIFIER . '[' LIT_INT ']' '=' '=' lit_list ';'
    7    | type TK_IDENTIFIER . '[' LIT_INT ']' ';'
    8    | type TK_IDENTIFIER . '(' param_list ')' block

    '='  shift, and go to state 11
    '['  shift, and go to state 12
    '('  shift, and go to state 13


state 11

    5 dec: type TK_IDENTIFIER '=' . '=' lit ';'

    '='  shift, and go to state 14


state 12

    6 dec: type TK_IDENTIFIER '[' . LIT_INT ']' '=' '=' lit_list ';'
    7    | type TK_IDENTIFIER '[' . LIT_INT ']' ';'

    LIT_INT  shift, and go to state 15


state 13

    8 dec: type TK_IDENTIFIER '(' . param_list ')' block

    KW_CHAR  shift, and go to state 1
    KW_INT   shift, and go to state 8

    $default  reduce using rule 12 (param_list)

    param_list  go to state 16
    type        go to state 17


state 14

    5 dec: type TK_IDENTIFIER '=' '=' . lit ';'

    LIT_INT     shift, and go to state 18
    LIT_CHAR    shift, and go to state 19
    LIT_STRING  shift, and go to state 20

    lit  go to state 21


state 15

    6 dec: type TK_IDENTIFIER '[' LIT_INT . ']' '=' '=' lit_list ';'
    7    | type TK_IDENTIFIER '[' LIT_INT . ']' ';'

    ']'  shift, and go to state 22


state 16

    8 dec: type TK_IDENTIFIER '(' param_list . ')' block

    ')'  shift, and go to state 23


state 17

   11 param_list: type . TK_IDENTIFIER param_list_tail

    TK_IDENTIFIER  shift, and go to state 24


state 18

   45 lit: LIT_INT .

    $default  reduce using rule 45 (lit)


state 19

   46 lit: LIT_CHAR .

    $default  reduce using rule 46 (lit)


state 20

   47 lit: LIT_STRING .

    $default  reduce using rule 47 (lit)


state 21

    5 dec: type TK_IDENTIFIER '=' '=' lit . ';'

    ';'  shift, and go to state 25


state 22

    6 dec: type TK_IDENTIFIER '[' LIT_INT ']' . '=' '=' lit_list ';'
    7    | type TK_IDENTIFIER '[' LIT_INT ']' . ';'

    '='  shift, and go to state 26
    ';'  shift, and go to state 27


state 23

    8 dec: type TK_IDENTIFIER '(' param_list ')' . block

    '{'  shift, and go to state 28

    block  go to state 29


state 24

   11 param_list: type TK_IDENTIFIER . param_list_tail

    ','  shift, and go to state 30

    $default  reduce using rule 14 (param_list_tail)

    param_list_tail  go to state 31


state 25

    5 dec: type TK_IDENTIFIER '=' '=' lit ';' .

    $default  reduce using rule 5 (dec)


state 26

    6 dec: type TK_IDENTIFIER '[' LIT_INT ']' '=' . '=' lit_list ';'

    '='  shift, and go to state 32


state 27

    7 dec: type TK_IDENTIFIER '[' LIT_INT ']' ';' .

    $default  reduce using rule 7 (dec)


state 28

   17 block: '{' . cmd_list '}'

    KW_IF          shift, and go to state 33
    KW_WHILE       shift, and go to state 34
    KW_READ        shift, and go to state 35
    KW_PRINT       shift, and go to state 36
    KW_RETURN      shift, and go to state 37
    TK_IDENTIFIER  shift, and go to state 38
    ';'            shift, and go to state 39
    '{'            shift, and go to state 28

    block     go to state 40
    cmd_list  go to state 41
    cmd       go to state 42


state 29

    8 dec: type TK_IDENTIFIER '(' param_list ')' block .

    $default  reduce using rule 8 (dec)


state 30

   13 param_list_tail: ',' . type TK_IDENTIFIER param_list_tail

    KW_CHAR  shift, and go to state 1
    KW_INT   shift, and go to state 8

    type  go to state 43


state 31

   11 param_list: type TK_IDENTIFIER param_list_tail .

    $default  reduce using rule 11 (param_list)


state 32

    6 dec: type TK_IDENTIFIER '[' LIT_INT ']' '=' '=' . lit_list ';'

    LIT_INT     shift, and go to state 18
    LIT_CHAR    shift, and go to state 19
    LIT_STRING  shift, and go to state 20

    lit_list  go to state 44
    lit       go to state 45


state 33

   21 cmd: KW_IF . '(' expr ')' KW_THEN cmd
   22    | KW_IF . '(' expr ')' KW_THEN cmd KW_ELSE cmd

    '('  shift, and go to state 46


state 34

   26 cmd: KW_WHILE . '(' expr ')' cmd

    '('  shift, and go to state 47


state 35

   23 cmd: KW_READ . TK_IDENTIFIER ';'

    TK_IDENTIFIER  shift, and go to state 48


state 36

   25 cmd: KW_PRINT . print_list ';'

    TK_IDENTIFIER  shift, and go to state 49
    LIT_INT        shift, and go to state 18
    LIT_CHAR       shift, and go to state 19
    LIT_STRING     shift, and go to state 50
    '('            shift, and go to state 51

    expr        go to state 52
    lit         go to state 53
    print_list  go to state 54


state 37

   24 cmd: KW_RETURN . expr ';'

    TK_IDENTIFIER  shift, and go to state 49
    LIT_INT        shift, and go to state 18
    LIT_CHAR       shift, and go to state 19
    LIT_STRING     shift, and go to state 20
    '('            shift, and go to state 51

    expr  go to state 55
    lit   go to state 53


state 38

   28 cmd: TK_IDENTIFIER . '=' '=' expr ';'
   29    | TK_IDENTIFIER . '[' expr ']' '=' '=' expr ';'

    '='  shift, and go to state 56
    '['  shift, and go to state 57


state 39

   20 cmd: ';' .

    $default  reduce using rule 20 (cmd)


state 40

   27 cmd: block .

    $default  reduce using rule 27 (cmd)


state 41

   17 block: '{' cmd_list . '}'

    '}'  shift, and go to state 58


state 42

   18 cmd_list: cmd . cmd_list
   19         | cmd .

    KW_IF          shift, and go to state 33
    KW_WHILE       shift, and go to state 34
    KW_READ        shift, and go to state 35
    KW_PRINT       shift, and go to state 36
    KW_RETURN      shift, and go to state 37
    TK_IDENTIFIER  shift, and go to state 38
    ';'            shift, and go to state 39
    '{'            shift, and go to state 28

    $default  reduce using rule 19 (cmd_list)

    block     go to state 40
    cmd_list  go to state 59
    cmd       go to state 42


state 43

   13 param_list_tail: ',' type . TK_IDENTIFIER param_list_tail

    TK_IDENTIFIER  shift, and go to state 60


state 44

    6 dec: type TK_IDENTIFIER '[' LIT_INT ']' '=' '=' lit_list . ';'

    ';'  shift, and go to state 61


state 45

    9 lit_list: lit . lit_list
   10         | lit .

    LIT_INT     shift, and go to state 18
    LIT_CHAR    shift, and go to state 19
    LIT_STRING  shift, and go to state 20

    $default  reduce using rule 10 (lit_list)

    lit_list  go to state 62
    lit       go to state 45


state 46

   21 cmd: KW_IF '(' . expr ')' KW_THEN cmd
   22    | KW_IF '(' . expr ')' KW_THEN cmd KW_ELSE cmd

    TK_IDENTIFIER  shift, and go to state 49
    LIT_INT        shift, and go to state 18
    LIT_CHAR       shift, and go to state 19
    LIT_STRING     shift, and go to state 20
    '('            shift, and go to state 51

    expr  go to state 63
    lit   go to state 53


state 47

   26 cmd: KW_WHILE '(' . expr ')' cmd

    TK_IDENTIFIER  shift, and go to state 49
    LIT_INT        shift, and go to state 18
    LIT_CHAR       shift, and go to state 19
    LIT_STRING     shift, and go to state 20
    '('            shift, and go to state 51

    expr  go to state 64
    lit   go to state 53


state 48

   23 cmd: KW_READ TK_IDENTIFIER . ';'

    ';'  shift, and go to state 65


state 49

   41 expr: TK_IDENTIFIER . '(' arg_list ')'
   42     | TK_IDENTIFIER .
   43     | TK_IDENTIFIER . '[' expr ']'

    '['  shift, and go to state 66
    '('  shift, and go to state 67

    $default  reduce using rule 42 (expr)


state 50

   47 lit: LIT_STRING .
   49 print_list: LIT_STRING . print_list_tail

    ','  shift, and go to state 68

    ';'       reduce using rule 47 (lit)
    ';'       [reduce using rule 52 (print_list_tail)]
    ','       [reduce using rule 47 (lit)]
    $default  reduce using rule 47 (lit)

    print_list_tail  go to state 69


state 51

   40 expr: '(' . expr ')'

    TK_IDENTIFIER  shift, and go to state 49
    LIT_INT        shift, and go to state 18
    LIT_CHAR       shift, and go to state 19
    LIT_STRING     shift, and go to state 20
    '('            shift, and go to state 51

    expr  go to state 70
    lit   go to state 53


state 52

   30 expr: expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . '>' expr
   36     | expr . '=' expr
   37     | expr . '&' expr
   38     | expr . '|' expr
   39     | expr . '~' expr
   48 print_list: expr . print_list_tail

    '+'  shift, and go to state 71
    '-'  shift, and go to state 72
    '*'  shift, and go to state 73
    '/'  shift, and go to state 74
    '<'  shift, and go to state 75
    '>'  shift, and go to state 76
    '='  shift, and go to state 77
    '&'  shift, and go to state 78
    '|'  shift, and go to state 79
    '~'  shift, and go to state 80
    ','  shift, and go to state 68

    $default  reduce using rule 52 (print_list_tail)

    print_list_tail  go to state 81


state 53

   44 expr: lit .

    $default  reduce using rule 44 (expr)


state 54

   25 cmd: KW_PRINT print_list . ';'

    ';'  shift, and go to state 82


state 55

   24 cmd: KW_RETURN expr . ';'
   30 expr: expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . '>' expr
   36     | expr . '=' expr
   37     | expr . '&' expr
   38     | expr . '|' expr
   39     | expr . '~' expr

    '+'  shift, and go to state 71
    '-'  shift, and go to state 72
    '*'  shift, and go to state 73
    '/'  shift, and go to state 74
    '<'  shift, and go to state 75
    '>'  shift, and go to state 76
    '='  shift, and go to state 77
    '&'  shift, and go to state 78
    '|'  shift, and go to state 79
    '~'  shift, and go to state 80
    ';'  shift, and go to state 83


state 56

   28 cmd: TK_IDENTIFIER '=' . '=' expr ';'

    '='  shift, and go to state 84


state 57

   29 cmd: TK_IDENTIFIER '[' . expr ']' '=' '=' expr ';'

    TK_IDENTIFIER  shift, and go to state 49
    LIT_INT        shift, and go to state 18
    LIT_CHAR       shift, and go to state 19
    LIT_STRING     shift, and go to state 20
    '('            shift, and go to state 51

    expr  go to state 85
    lit   go to state 53


state 58

   17 block: '{' cmd_list '}' .

    $default  reduce using rule 17 (block)


state 59

   18 cmd_list: cmd cmd_list .

    $default  reduce using rule 18 (cmd_list)


state 60

   13 param_list_tail: ',' type TK_IDENTIFIER . param_list_tail

    ','  shift, and go to state 30

    $default  reduce using rule 14 (param_list_tail)

    param_list_tail  go to state 86


state 61

    6 dec: type TK_IDENTIFIER '[' LIT_INT ']' '=' '=' lit_list ';' .

    $default  reduce using rule 6 (dec)


state 62

    9 lit_list: lit lit_list .

    $default  reduce using rule 9 (lit_list)


state 63

   21 cmd: KW_IF '(' expr . ')' KW_THEN cmd
   22    | KW_IF '(' expr . ')' KW_THEN cmd KW_ELSE cmd
   30 expr: expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . '>' expr
   36     | expr . '=' expr
   37     | expr . '&' expr
   38     | expr . '|' expr
   39     | expr . '~' expr

    '+'  shift, and go to state 71
    '-'  shift, and go to state 72
    '*'  shift, and go to state 73
    '/'  shift, and go to state 74
    '<'  shift, and go to state 75
    '>'  shift, and go to state 76
    '='  shift, and go to state 77
    '&'  shift, and go to state 78
    '|'  shift, and go to state 79
    '~'  shift, and go to state 80
    ')'  shift, and go to state 87


state 64

   26 cmd: KW_WHILE '(' expr . ')' cmd
   30 expr: expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . '>' expr
   36     | expr . '=' expr
   37     | expr . '&' expr
   38     | expr . '|' expr
   39     | expr . '~' expr

    '+'  shift, and go to state 71
    '-'  shift, and go to state 72
    '*'  shift, and go to state 73
    '/'  shift, and go to state 74
    '<'  shift, and go to state 75
    '>'  shift, and go to state 76
    '='  shift, and go to state 77
    '&'  shift, and go to state 78
    '|'  shift, and go to state 79
    '~'  shift, and go to state 80
    ')'  shift, and go to state 88


state 65

   23 cmd: KW_READ TK_IDENTIFIER ';' .

    $default  reduce using rule 23 (cmd)


state 66

   43 expr: TK_IDENTIFIER '[' . expr ']'

    TK_IDENTIFIER  shift, and go to state 49
    LIT_INT        shift, and go to state 18
    LIT_CHAR       shift, and go to state 19
    LIT_STRING     shift, and go to state 20
    '('            shift, and go to state 51

    expr  go to state 89
    lit   go to state 53


state 67

   41 expr: TK_IDENTIFIER '(' . arg_list ')'

    TK_IDENTIFIER  shift, and go to state 49
    LIT_INT        shift, and go to state 18
    LIT_CHAR       shift, and go to state 19
    LIT_STRING     shift, and go to state 20
    '('            shift, and go to state 51

    $default  reduce using rule 54 (arg_list)

    expr      go to state 90
    lit       go to state 53
    arg_list  go to state 91


state 68

   50 print_list_tail: ',' . expr print_list_tail
   51                | ',' . LIT_STRING print_list_tail

    TK_IDENTIFIER  shift, and go to state 49
    LIT_INT        shift, and go to state 18
    LIT_CHAR       shift, and go to state 19
    LIT_STRING     shift, and go to state 92
    '('            shift, and go to state 51

    expr  go to state 93
    lit   go to state 53


state 69

   49 print_list: LIT_STRING print_list_tail .

    $default  reduce using rule 49 (print_list)


state 70

   30 expr: expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . '>' expr
   36     | expr . '=' expr
   37     | expr . '&' expr
   38     | expr . '|' expr
   39     | expr . '~' expr
   40     | '(' expr . ')'

    '+'  shift, and go to state 71
    '-'  shift, and go to state 72
    '*'  shift, and go to state 73
    '/'  shift, and go to state 74
    '<'  shift, and go to state 75
    '>'  shift, and go to state 76
    '='  shift, and go to state 77
    '&'  shift, and go to state 78
    '|'  shift, and go to state 79
    '~'  shift, and go to state 80
    ')'  shift, and go to state 94


state 71

   30 expr: expr '+' . expr

    TK_IDENTIFIER  shift, and go to state 49
    LIT_INT        shift, and go to state 18
    LIT_CHAR       shift, and go to state 19
    LIT_STRING     shift, and go to state 20
    '('            shift, and go to state 51

    expr  go to state 95
    lit   go to state 53


state 72

   31 expr: expr '-' . expr

    TK_IDENTIFIER  shift, and go to state 49
    LIT_INT        shift, and go to state 18
    LIT_CHAR       shift, and go to state 19
    LIT_STRING     shift, and go to state 20
    '('            shift, and go to state 51

    expr  go to state 96
    lit   go to state 53


state 73

   32 expr: expr '*' . expr

    TK_IDENTIFIER  shift, and go to state 49
    LIT_INT        shift, and go to state 18
    LIT_CHAR       shift, and go to state 19
    LIT_STRING     shift, and go to state 20
    '('            shift, and go to state 51

    expr  go to state 97
    lit   go to state 53


state 74

   33 expr: expr '/' . expr

    TK_IDENTIFIER  shift, and go to state 49
    LIT_INT        shift, and go to state 18
    LIT_CHAR       shift, and go to state 19
    LIT_STRING     shift, and go to state 20
    '('            shift, and go to state 51

    expr  go to state 98
    lit   go to state 53


state 75

   34 expr: expr '<' . expr

    TK_IDENTIFIER  shift, and go to state 49
    LIT_INT        shift, and go to state 18
    LIT_CHAR       shift, and go to state 19
    LIT_STRING     shift, and go to state 20
    '('            shift, and go to state 51

    expr  go to state 99
    lit   go to state 53


state 76

   35 expr: expr '>' . expr

    TK_IDENTIFIER  shift, and go to state 49
    LIT_INT        shift, and go to state 18
    LIT_CHAR       shift, and go to state 19
    LIT_STRING     shift, and go to state 20
    '('            shift, and go to state 51

    expr  go to state 100
    lit   go to state 53


state 77

   36 expr: expr '=' . expr

    TK_IDENTIFIER  shift, and go to state 49
    LIT_INT        shift, and go to state 18
    LIT_CHAR       shift, and go to state 19
    LIT_STRING     shift, and go to state 20
    '('            shift, and go to state 51

    expr  go to state 101
    lit   go to state 53


state 78

   37 expr: expr '&' . expr

    TK_IDENTIFIER  shift, and go to state 49
    LIT_INT        shift, and go to state 18
    LIT_CHAR       shift, and go to state 19
    LIT_STRING     shift, and go to state 20
    '('            shift, and go to state 51

    expr  go to state 102
    lit   go to state 53


state 79

   38 expr: expr '|' . expr

    TK_IDENTIFIER  shift, and go to state 49
    LIT_INT        shift, and go to state 18
    LIT_CHAR       shift, and go to state 19
    LIT_STRING     shift, and go to state 20
    '('            shift, and go to state 51

    expr  go to state 103
    lit   go to state 53


state 80

   39 expr: expr '~' . expr

    TK_IDENTIFIER  shift, and go to state 49
    LIT_INT        shift, and go to state 18
    LIT_CHAR       shift, and go to state 19
    LIT_STRING     shift, and go to state 20
    '('            shift, and go to state 51

    expr  go to state 104
    lit   go to state 53


state 81

   48 print_list: expr print_list_tail .

    $default  reduce using rule 48 (print_list)


state 82

   25 cmd: KW_PRINT print_list ';' .

    $default  reduce using rule 25 (cmd)


state 83

   24 cmd: KW_RETURN expr ';' .

    $default  reduce using rule 24 (cmd)


state 84

   28 cmd: TK_IDENTIFIER '=' '=' . expr ';'

    TK_IDENTIFIER  shift, and go to state 49
    LIT_INT        shift, and go to state 18
    LIT_CHAR       shift, and go to state 19
    LIT_STRING     shift, and go to state 20
    '('            shift, and go to state 51

    expr  go to state 105
    lit   go to state 53


state 85

   29 cmd: TK_IDENTIFIER '[' expr . ']' '=' '=' expr ';'
   30 expr: expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . '>' expr
   36     | expr . '=' expr
   37     | expr . '&' expr
   38     | expr . '|' expr
   39     | expr . '~' expr

    '+'  shift, and go to state 71
    '-'  shift, and go to state 72
    '*'  shift, and go to state 73
    '/'  shift, and go to state 74
    '<'  shift, and go to state 75
    '>'  shift, and go to state 76
    '='  shift, and go to state 77
    '&'  shift, and go to state 78
    '|'  shift, and go to state 79
    '~'  shift, and go to state 80
    ']'  shift, and go to state 106


state 86

   13 param_list_tail: ',' type TK_IDENTIFIER param_list_tail .

    $default  reduce using rule 13 (param_list_tail)


state 87

   21 cmd: KW_IF '(' expr ')' . KW_THEN cmd
   22    | KW_IF '(' expr ')' . KW_THEN cmd KW_ELSE cmd

    KW_THEN  shift, and go to state 107


state 88

   26 cmd: KW_WHILE '(' expr ')' . cmd

    KW_IF          shift, and go to state 33
    KW_WHILE       shift, and go to state 34
    KW_READ        shift, and go to state 35
    KW_PRINT       shift, and go to state 36
    KW_RETURN      shift, and go to state 37
    TK_IDENTIFIER  shift, and go to state 38
    ';'            shift, and go to state 39
    '{'            shift, and go to state 28

    block  go to state 40
    cmd    go to state 108


state 89

   30 expr: expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . '>' expr
   36     | expr . '=' expr
   37     | expr . '&' expr
   38     | expr . '|' expr
   39     | expr . '~' expr
   43     | TK_IDENTIFIER '[' expr . ']'

    '+'  shift, and go to state 71
    '-'  shift, and go to state 72
    '*'  shift, and go to state 73
    '/'  shift, and go to state 74
    '<'  shift, and go to state 75
    '>'  shift, and go to state 76
    '='  shift, and go to state 77
    '&'  shift, and go to state 78
    '|'  shift, and go to state 79
    '~'  shift, and go to state 80
    ']'  shift, and go to state 109


state 90

   30 expr: expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . '>' expr
   36     | expr . '=' expr
   37     | expr . '&' expr
   38     | expr . '|' expr
   39     | expr . '~' expr
   53 arg_list: expr . arg_list_tail

    '+'  shift, and go to state 71
    '-'  shift, and go to state 72
    '*'  shift, and go to state 73
    '/'  shift, and go to state 74
    '<'  shift, and go to state 75
    '>'  shift, and go to state 76
    '='  shift, and go to state 77
    '&'  shift, and go to state 78
    '|'  shift, and go to state 79
    '~'  shift, and go to state 80
    ','  shift, and go to state 110

    $default  reduce using rule 56 (arg_list_tail)

    arg_list_tail  go to state 111


state 91

   41 expr: TK_IDENTIFIER '(' arg_list . ')'

    ')'  shift, and go to state 112


state 92

   47 lit: LIT_STRING .
   51 print_list_tail: ',' LIT_STRING . print_list_tail

    ','  shift, and go to state 68

    ';'       reduce using rule 47 (lit)
    ';'       [reduce using rule 52 (print_list_tail)]
    ','       [reduce using rule 47 (lit)]
    $default  reduce using rule 47 (lit)

    print_list_tail  go to state 113


state 93

   30 expr: expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . '>' expr
   36     | expr . '=' expr
   37     | expr . '&' expr
   38     | expr . '|' expr
   39     | expr . '~' expr
   50 print_list_tail: ',' expr . print_list_tail

    '+'  shift, and go to state 71
    '-'  shift, and go to state 72
    '*'  shift, and go to state 73
    '/'  shift, and go to state 74
    '<'  shift, and go to state 75
    '>'  shift, and go to state 76
    '='  shift, and go to state 77
    '&'  shift, and go to state 78
    '|'  shift, and go to state 79
    '~'  shift, and go to state 80
    ','  shift, and go to state 68

    $default  reduce using rule 52 (print_list_tail)

    print_list_tail  go to state 114


state 94

   40 expr: '(' expr ')' .

    $default  reduce using rule 40 (expr)


state 95

   30 expr: expr . '+' expr
   30     | expr '+' expr .
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . '>' expr
   36     | expr . '=' expr
   37     | expr . '&' expr
   38     | expr . '|' expr
   39     | expr . '~' expr

    '*'  shift, and go to state 73
    '/'  shift, and go to state 74
    '<'  shift, and go to state 75
    '>'  shift, and go to state 76
    '='  shift, and go to state 77
    '&'  shift, and go to state 78
    '|'  shift, and go to state 79
    '~'  shift, and go to state 80

    $default  reduce using rule 30 (expr)


state 96

   30 expr: expr . '+' expr
   31     | expr . '-' expr
   31     | expr '-' expr .
   32     | expr . '*' expr
   33     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . '>' expr
   36     | expr . '=' expr
   37     | expr . '&' expr
   38     | expr . '|' expr
   39     | expr . '~' expr

    '*'  shift, and go to state 73
    '/'  shift, and go to state 74
    '<'  shift, and go to state 75
    '>'  shift, and go to state 76
    '='  shift, and go to state 77
    '&'  shift, and go to state 78
    '|'  shift, and go to state 79
    '~'  shift, and go to state 80

    $default  reduce using rule 31 (expr)


state 97

   30 expr: expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   32     | expr '*' expr .
   33     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . '>' expr
   36     | expr . '=' expr
   37     | expr . '&' expr
   38     | expr . '|' expr
   39     | expr . '~' expr

    '<'  shift, and go to state 75
    '>'  shift, and go to state 76
    '='  shift, and go to state 77
    '&'  shift, and go to state 78
    '|'  shift, and go to state 79
    '~'  shift, and go to state 80

    $default  reduce using rule 32 (expr)


state 98

   30 expr: expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   33     | expr '/' expr .
   34     | expr . '<' expr
   35     | expr . '>' expr
   36     | expr . '=' expr
   37     | expr . '&' expr
   38     | expr . '|' expr
   39     | expr . '~' expr

    '<'  shift, and go to state 75
    '>'  shift, and go to state 76
    '='  shift, and go to state 77
    '&'  shift, and go to state 78
    '|'  shift, and go to state 79
    '~'  shift, and go to state 80

    $default  reduce using rule 33 (expr)


state 99

   30 expr: expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   34     | expr . '<' expr
   34     | expr '<' expr .
   35     | expr . '>' expr
   36     | expr . '=' expr
   37     | expr . '&' expr
   38     | expr . '|' expr
   39     | expr . '~' expr

    '~'  shift, and go to state 80

    $default  reduce using rule 34 (expr)


state 100

   30 expr: expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . '>' expr
   35     | expr '>' expr .
   36     | expr . '=' expr
   37     | expr . '&' expr
   38     | expr . '|' expr
   39     | expr . '~' expr

    '~'  shift, and go to state 80

    $default  reduce using rule 35 (expr)


state 101

   30 expr: expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . '>' expr
   36     | expr . '=' expr
   36     | expr '=' expr .
   37     | expr . '&' expr
   38     | expr . '|' expr
   39     | expr . '~' expr

    '~'  shift, and go to state 80

    $default  reduce using rule 36 (expr)


state 102

   30 expr: expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . '>' expr
   36     | expr . '=' expr
   37     | expr . '&' expr
   37     | expr '&' expr .
   38     | expr . '|' expr
   39     | expr . '~' expr

    '~'  shift, and go to state 80

    $default  reduce using rule 37 (expr)

